After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 523141 - Results selection using the keyboard arrow keys in the "Local Search" is broken
Results selection using the keyboard arrow keys in the "Local Search" is broken
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Plugins
2.22.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2008-03-18 11:43 UTC by Victor Osadci (Vic)
Modified: 2010-04-06 14:15 UTC
See Also:
GNOME target: ---
GNOME version: 2.21/2.22


Attachments
proposed patch (782 bytes, patch)
2010-04-04 20:26 UTC, Simon Wenner
committed Details | Review

Description Victor Osadci (Vic) 2008-03-18 11:43:34 UTC
To reproduce:

1. Search for a string that results in a large list, so that a scroll bar is shown
2. Select the first item in the results list;
3. Press the down key to move the selection to the bottom of the list;

Result:

The Selection is off screen.
Comment 1 Bastien Nocera 2008-05-24 12:01:55 UTC
That's not the video indexer. Did you use the Tracker plugin?
Comment 2 Victor Osadci (Vic) 2008-05-24 12:09:48 UTC
Bastien, yes, that was the Tracker plugin.
Comment 3 Bastien Nocera 2008-05-24 12:12:37 UTC
That's one for Philip, the video list widget might need some work to make it follow the selection.
Comment 4 Simon Wenner 2010-04-04 20:26:32 UTC
Created attachment 157915 [details] [review]
proposed patch

This patch removes the additional unnecessary viewport.
Comment 5 Philip Withnall 2010-04-04 20:33:06 UTC
Looks good. Please commit to master and gnome-2-30. :-)
Comment 6 Bastien Nocera 2010-04-06 14:13:25 UTC
Please format your patch using git-format-patch in the future, or use "git-bz" to file patches.