Key navigation is broken in "local search" plugin

Fix arrow keys not working in the tracker plugin.

https://bugzilla.gnome.org/show_bug.cgi?id=523141